Istio/demoapp_for_subset/01-deploy-demoappv10.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demoappv10
    version: v1.0
  name: demoappv10
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  selector:
    matchLabels:
      app: demoapp
      version: v1.0
  template:
    metadata:
      labels:
        app: demoapp
        version: v1.0
    spec:
      containers:
      - image: ikubernetes/demoapp:v1.0
        imagePullPolicy: IfNotPresent
        name: demoapp
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        resources:
          limits:
            cpu: 50m
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: demoappv10
#spec:
#  ports:
#    - name: http
#      port: 8080
#      protocol: TCP
#      targetPort: 8080
#  selector:
#    app: demoapp
#    version: v1.0
#  type: ClusterIP
#---
