Istio/demoapp_for_subset/02-deploy-demoapp-v11.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demoappv11
    version: v1.1
  name: demoappv11
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      app: demoapp
      version: v1.1
  template:
    metadata:
      labels:
        app: demoapp
        version: v1.1
    spec:
      containers:
      - image: ikubernetes/demoapp:v1.1
        imagePullPolicy: IfNotPresent
        name: demoapp
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        resources:
          limits:
            cpu: 50m
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: demoappv11
#spec:
#  ports:
#    - name: http-8080
#      port: 8080
#      protocol: TCP
#      targetPort: 8080
#  selector:
#    app: demoapp
#    version: v1.1
#  type: ClusterIP
#---
